--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -6,3 +6,5 @@ build_and_push_debug: false
 build_and_push_push: true
 build_and_push_tag_latest: true
 build_and_push_tag_versions: true
+build_and_push_transfer: false
+build_and_push_transfer_tmp_image_dir: /tmp/docker/images
