Fixed some conditionals. You can now also just pull an image and transfer it.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,5 +1,7 @@
 ---
 build_and_push_image_name: local/imagename
+build_and_push_image_build: true
+build_and_push_image_fallback_try_pull: true
 build_and_push_image_version: 0.0.0
 build_and_push_docker_file_path: ./files/docker/imagename
 build_and_push_debug: false
