--- a/tasks/image-build.yml
+++ b/tasks/image-build.yml
@@ -1,16 +1,17 @@
 ---
-- name: Print current image
-  run_once: true
-  debug:
-    msg: "Building image: {{build_and_push_image_name}}"
-  when: build_and_push_debug == true
-
 - name: Check if Image exists
   run_once: true
   local_action:
     module: shell
     _raw_params: "docker image history {{build_and_push_image_name}}:{{build_and_push_image_version}} | wc -l"
   register: image_exists
+
+- name: Print current image
+  run_once: true
+  debug:
+    msg: "Building image: {{build_and_push_image_name}}"
+  when:
+  - build_and_push_debug == true and build_and_push_image_build == true
 
 - name: Build the Image
   run_once: true
@@ -19,4 +20,5 @@
     path: "{{build_and_push_docker_file_path}}"
     name: "{{build_and_push_image_name}}"
     tag: "{{build_and_push_image_version}}"
-  when: image_exists.stdout == "0"
+  when:
+  - image_exists.stdout == "0" and build_and_push_image_build == true
