--- a/tasks/image-push.yml
+++ b/tasks/image-push.yml
@@ -5,9 +5,7 @@
     module: shell
     _raw_params: "docker push {{build_and_push_image_name}}:latest"
   when:
-  - image_exists.stdout == "0"
-  - build_and_push_tag_latest == true
-  - build_and_push_push == true
+  - image_exists.stdout == "0" and build_and_push_tag_latest == true and build_and_push_push == true
 
 - name: Push version
   run_once: true
@@ -15,8 +13,7 @@
     module: shell
     _raw_params: "docker push {{build_and_push_image_name}}:{{build_and_push_image_version}}"
   when:
-  - image_exists.stdout == "0"
-  - build_and_push_push == true
+  - image_exists.stdout == "0" and build_and_push_push == true
 
 - name: Push versions
   run_once: true
@@ -27,7 +24,4 @@
   - "{{build_and_push_image_version.split('.')[0]}}.{{build_and_push_image_version.split('.')[1]}}"
   - "{{build_and_push_image_version.split('.')[0]}}"
   when:
-  - image_exists.stdout == "0"
-  - build_and_push_tag_versions == true
-  - build_and_push_push == true
-  - "{{build_and_push_image_version.split('.')|length}} > 1"
+  - image_exists.stdout == "0" and build_and_push_tag_versions == true and build_and_push_push == true and build_and_push_image_version.split('.')|length > 1
