--- a/tasks/image-tag.yml
+++ b/tasks/image-tag.yml
@@ -1,4 +1,38 @@
 ---
+- name: Check if Image exists
+  run_once: true
+  local_action:
+    module: shell
+    _raw_params: "docker image history {{build_and_push_image_name}}:{{build_and_push_image_version}} | wc -l"
+  register: tag_image_exists
+
+- name: debug
+  run_once: true
+  debug:
+    msg: "{{tag_image_exists.stdout}}"
+
+- name: if image does still not exist, try to pull it
+  run_once:
+  local_action:
+    module: shell
+    _raw_params: "docker pull {{build_and_push_image_name}}:{{build_and_push_image_version}}"
+  when:
+  - (tag_image_exists.stdout == "0" and build_and_push_image_fallback_try_pull == true)
+
+- name: Check if Image exists
+  run_once: true
+  local_action:
+    module: shell
+    _raw_params: "docker image history {{build_and_push_image_name}}:{{build_and_push_image_version}} | wc -l"
+  register: tag_image_exists
+
+- name: fail
+  run_once: true
+  fail:
+    msg: "Image does not exist {{build_and_push_image_name}}:{{build_and_push_image_version}}"
+  when:
+  - tag_image_exists.stdout == "0"
+
 - name: Tag with Version
   run_once: true
   local_action:
@@ -8,9 +42,7 @@
   - "{{build_and_push_image_version.split('.')[0]}}.{{build_and_push_image_version.split('.')[1]}}"
   - "{{build_and_push_image_version.split('.')[0]}}"
   when:
-  - image_exists.stdout == "0"
-  - build_and_push_tag_versions == true
-  - "{{build_and_push_image_version.split('.')|length}} > 1"
+  - image_exists.stdout == "0" and build_and_push_tag_versions == true and build_and_push_image_version.split('.')|length > 1
 
 - name: Tag latest
   run_once: true
@@ -20,5 +52,4 @@
   with_items:
   - "latest"
   when:
-  - image_exists.stdout == "0"
-  - build_and_push_tag_latest == true
+  - image_exists.stdout == "0" and build_and_push_tag_latest == true
