Ads retagging of images for transfer.
Also some tweaks like outputting the image it actually builds.

--- a/tasks/image-build.yml
+++ b/tasks/image-build.yml
@@ -1,19 +1,19 @@
 ---
-- name: Check if Image exists
+- name: Check if Image exists {{build_and_push_image_name}}
   run_once: true
   local_action:
     module: shell
     _raw_params: "docker image history {{build_and_push_image_name}}:{{build_and_push_image_version}} | wc -l"
   register: image_exists
 
-- name: Print current image
+- name: Print current image {{build_and_push_image_name}}
   run_once: true
   debug:
     msg: "Building image: {{build_and_push_image_name}}"
   when:
   - build_and_push_debug == true and build_and_push_image_build == true
 
-- name: Build the Image
+- name: Build the Image {{build_and_push_image_name}}
   run_once: true
   local_action:
     module: docker_image
