--- a/tasks/image-tag.yml
+++ b/tasks/image-tag.yml
@@ -1,17 +1,12 @@
 ---
-- name: Check if Image exists
+- name: Check if Image exists {{build_and_push_image_name}}
   run_once: true
   local_action:
     module: shell
     _raw_params: "docker image history {{build_and_push_image_name}}:{{build_and_push_image_version}} | wc -l"
   register: tag_image_exists
 
-- name: debug
-  run_once: true
-  debug:
-    msg: "{{tag_image_exists.stdout}}"
-
-- name: if image does still not exist, try to pull it
+- name: if image does still not exist, try to pull it {{build_and_push_image_name}}
   run_once:
   local_action:
     module: shell
@@ -19,21 +14,21 @@
   when:
   - (tag_image_exists.stdout == "0" and build_and_push_image_fallback_try_pull == true)
 
-- name: Check if Image exists
+- name: Check if Image exists {{build_and_push_image_name}}
   run_once: true
   local_action:
     module: shell
     _raw_params: "docker image history {{build_and_push_image_name}}:{{build_and_push_image_version}} | wc -l"
   register: tag_image_exists
 
-- name: fail
+- name: fail {{build_and_push_image_name}}
   run_once: true
   fail:
     msg: "Image does not exist {{build_and_push_image_name}}:{{build_and_push_image_version}}"
   when:
   - tag_image_exists.stdout == "0"
 
-- name: Tag with Version
+- name: Tag with Version {{build_and_push_image_name}}
   run_once: true
   local_action:
     module: shell
@@ -42,9 +37,9 @@
   - "{{build_and_push_image_version.split('.')[0]}}.{{build_and_push_image_version.split('.')[1]}}"
   - "{{build_and_push_image_version.split('.')[0]}}"
   when:
-  - image_exists.stdout == "0" and build_and_push_tag_versions == true and build_and_push_image_version.split('.')|length > 1
+  - image_exists.stdout == "0" and build_and_push_tag_versions == true and build_and_push_image_version.split('.')|length > 1 and build_and_push_new_image_tag == false
 
-- name: Tag latest
+- name: Tag latest {{build_and_push_image_name}}
   run_once: true
   local_action:
     module: shell
@@ -52,4 +47,12 @@
   with_items:
   - "latest"
   when:
-  - image_exists.stdout == "0" and build_and_push_tag_latest == true
+  - image_exists.stdout == "0" and build_and_push_tag_latest == true and build_and_push_new_image_tag == false
+
+- name: Tag latest {{build_and_push_image_name}}
+  run_once: true
+  local_action:
+    module: shell
+    _raw_params: "docker tag {{build_and_push_image_name}}:{{build_and_push_image_version}} {{build_and_push_image_name}}:{{build_and_push_new_image_tag}}"
+  when:
+  - build_and_push_new_image_tag != false
