--- a/tasks/image-push.yml
+++ b/tasks/image-push.yml
@@ -1,5 +1,5 @@
 ---
-- name: Push latest
+- name: Push latest {{build_and_push_image_name}}
   run_once: true
   local_action:
     module: shell
@@ -7,7 +7,7 @@
   when:
   - image_exists.stdout == "0" and build_and_push_tag_latest == true and build_and_push_push == true
 
-- name: Push version
+- name: Push version {{build_and_push_image_name}}
   run_once: true
   local_action:
     module: shell
@@ -15,7 +15,7 @@
   when:
   - image_exists.stdout == "0" and build_and_push_push == true
 
-- name: Push versions
+- name: Push versions {{build_and_push_image_name}}
   run_once: true
   local_action:
     module: shell
