--- a/tasks/image-build.yml
+++ b/tasks/image-build.yml
@@ -1,26 +1,27 @@
 ---
 - name: Check if Image exists {{build_and_push_image_name}}
   run_once: true
-  local_action:
-    module: shell
-    _raw_params: "docker image history {{build_and_push_image_name}}:{{build_and_push_image_version}} | wc -l"
+  shell:
+    _raw_params: "docker image history {{ build_and_push_image_name }}:{{ build_and_push_image_version }} | wc -l"
+  delegate_to: localhost
   register: image_exists
+  changed_when: false
 
 - name: Print current image {{build_and_push_image_name}}
   run_once: true
   debug:
-    msg: "Building image: {{build_and_push_image_name}}"
+    msg: "Building image: {{ build_and_push_image_name }}"
   when:
   - build_and_push_debug == true and build_and_push_image_build == true
 
 - name: Build the Image {{build_and_push_image_name}}
   run_once: true
-  local_action:
-    module: docker_image
-    path: "{{build_and_push_docker_file_path}}"
-    name: "{{build_and_push_image_name}}"
-    tag: "{{build_and_push_image_version}}"
-    pull: "{{build_and_push_pull}}"
-    buildargs: "{{build_and_push_args}}"
+  docker_image:
+    path: "{{ build_and_push_docker_file_path }}"
+    name: "{{ build_and_push_image_name }}"
+    tag: "{{ build_and_push_image_version }}"
+    pull: "{{ build_and_push_pull }}"
+    buildargs: "{{ build_and_push_args }}"
+  delegate_to: localhost
   when:
   - image_exists.stdout == "0" and build_and_push_image_build == true
