--- a/tasks/image-push.yml
+++ b/tasks/image-push.yml
@@ -1,27 +1,27 @@
 ---
 - name: Push latest {{build_and_push_image_name}}
   run_once: true
-  local_action:
-    module: shell
-    _raw_params: "docker push {{build_and_push_image_name}}:latest"
+  shell:
+    _raw_params: "docker push {{ build_and_push_image_name }}:latest"
+  delegate_to: localhost
   when:
   - image_exists.stdout == "0" and build_and_push_tag_latest == true and build_and_push_push == true
 
 - name: Push version {{build_and_push_image_name}}
   run_once: true
-  local_action:
-    module: shell
-    _raw_params: "docker push {{build_and_push_image_name}}:{{build_and_push_image_version}}"
+  shell:
+    _raw_params: "docker push {{ build_and_push_image_name }}:{{ build_and_push_image_version }}"
+  delegate_to: localhost
   when:
   - image_exists.stdout == "0" and build_and_push_push == true
 
 - name: Push versions {{build_and_push_image_name}}
   run_once: true
-  local_action:
-    module: shell
-    _raw_params: "docker push {{build_and_push_image_name}}:{{item}}"
+  shell:
+    _raw_params: "docker push {{ build_and_push_image_name }}:{{ item }}"
+  delegate_to: localhost
   with_items:
-  - "{{build_and_push_image_version.split('.')[0]}}.{{build_and_push_image_version.split('.')[1]}}"
-  - "{{build_and_push_image_version.split('.')[0]}}"
-  when:
-  - image_exists.stdout == "0" and build_and_push_tag_versions == true and build_and_push_push == true and build_and_push_image_version.split('.')|length > 1
+  - "{{ build_and_push_image_version.split('.')[0] }}.{{ build_and_push_image_version.split('.')[1] }}"
+  - "{{ build_and_push_image_version.split('.')[0] }}"
+  when: image_exists.stdout == "0" and build_and_push_tag_versions == true and build_and_push_push == true and
+        build_and_push_image_version.split('.')|length > 1
